<?xml version="1.0" encoding="utf-8"?>

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:id="@+id/sound_list_fragment"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.sound_grid.SoundGridFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/upper_buttons"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:gravity="center_vertical"
            android:paddingLeft="10dp"
            android:paddingRight="10dp">

            <androidx.appcompat.widget.AppCompatImageButton
                android:id="@+id/mute_button"
                style="@style/UpperButtons"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                app:srcCompat="@drawable/ic_mute_off_white" />

            <androidx.appcompat.widget.AppCompatImageButton
                android:id="@+id/random_button"
                style="@style/UpperButtons"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                app:srcCompat="@drawable/ic_random" />

            <androidx.appcompat.widget.AppCompatImageButton
                android:id="@+id/play_button"
                style="@style/UpperButtons"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                app:srcCompat="@drawable/ic_play" />

            <androidx.appcompat.widget.AppCompatImageButton
                android:id="@+id/save_fav_button"
                style="@style/UpperButtons"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                app:srcCompat="@drawable/ic_save_fav" />

            <androidx.appcompat.widget.AppCompatImageButton
                android:id="@+id/set_timer_button"
                style="@style/UpperButtons"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                app:srcCompat="@drawable/ic_timer_on" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:id="@+id/timer_text"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/timerText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_gravity="center"
                android:text="Sounds will stop in 00:00:00"
                android:textColor="@android:color/white"
                android:visibility="gone"
                android:gravity="center"
                tools:visibility="visible" />
        </LinearLayout>


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/sounds_recycler_view"
            android:scrollbars="none"
            android:layout_height="match_parent"
            android:listSelector="#00000000"
            android:layout_width="match_parent"
            android:orientation="vertical" />

    </LinearLayout>

</FrameLayout>
