...
    android:background="?android:attr/selectableItemBackground"
    android:layout_height="wrap_content"
    android:padding="10dp"
    android:orientation="vertical">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/comboName"
        style="@style/ListItem"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/deleteCombo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="3dp"
        android:background="?android:attr/selectableItemBackground"
        android:src="@drawable/ic_delete"
        app:layout_constraintBottom_toBottomOf="parent"
...
